<resources>
    <string name="app_name">MeetU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="logout">Log out</string>
    <string name="chat_list">Chat List</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="chat">Chat</string>
    <string name="delivered">delivered</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password? Recover</string>
    <string name="no_account">Not have account? Register</string>
    <string name="have_account">Already have account? Login</string>
</resources>