<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <!--TextView: Label Login-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <!--EditText: Input Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/emailTIL">
        <EditText
            android:id="@+id/emailEt"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--EditText: Input Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTIL"
        android:layout_below="@id/emailTIL"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/passwordEt"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Button: Login User-->
    <Button
        android:id="@+id/loginBtn"
        android:text="@string/login"
        android:layout_below="@+id/passwordTIL"
        android:layout_centerHorizontal="true"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--TextView: Show dialog to recover password-->
    <TextView
        android:id="@+id/recoverPassTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/forget_password"
        android:layout_below="@+id/loginBtn"
        android:textColor="@color/black"/>

    <!--Google sign in button: Sign in with google account-->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/recoverPassTv">
    </com.google.android.gms.common.SignInButton>

    <!--TextView: Click go to Register Activity-->
    <TextView
        android:id="@+id/nothave_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>


</RelativeLayout>